Still trying to fix issues with red sheet on mobile.

--- a/app/assets/stylesheets/components/_red_sheet.sass
+++ b/app/assets/stylesheets/components/_red_sheet.sass
@@ -49,7 +49,7 @@
       background: white
       color: $default-font-color
 
-      @media screen and (max-width: #{$tablet})
+      @media screen and (max-width: #{$phablet})
         position: fixed
         top: 0
         left: 0
